# esgf-download

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  Makefile  README.md  alembic.ini  citation.cff  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  doc.yml  pypi-publish.yml
alembic/: env.py
alembic/versions/: 08c857708e92_create_3_35_tables.py  4.0.0_init_tables.py  64eb1acbd0f3_alter_param_table.py
configuration/: index.html
docs/: download.md  index.md  installation.md  mkdocs.yml  quickstart.md  search.md
docs/docs/: acknowledgements.md  configuration.md  download.md  glossary.md  index.md  installation.md  plugins.md  queries.md  quickstart.md  search.md
docs/docs/stylesheets/: extra.css
docs/includes/: abbreviations.md
download/: index.html
esgpull/: __init__.py  auth.py  config.py  config_pydantic.py  constants.py  context.py  database.py  db.py  download.py  esgpull.py  exceptions.py  facet.py  fs.py  graph.py  install_config.py  plugin.py  processor.py  query.py  result.py  settings.py  tui.py  types.py  utils.py
esgpull/cli/: __init__.py  add.py  autoremove.py  config.py  convert.py  datasets.py  decorators.py  download.py  facet.py  get.py  index_nodes.py  init.py  install.py  login.py  param.py  plugins.py  remove.py  replicate.py  retry.py  search.py  self.py  settings.py  show.py  status.py  track.py  translate.py  update.py  upgrade.py  utils.py
esgpull/context/: __init__.py  constants.py  context.py  facet.py  facet.py.old  facets.py  solr.py  stac.py  types.py  utils.py  wrapper.py
esgpull/db/: __init__.py  core.py  models.py  utils.py
esgpull/db/migrations/: env.py
esgpull/db/migrations/versions/: 0.1.0_update_tables.py  0.2.0_update_tables.py
esgpull/download/: __init__.py  async_download.py  download.py
esgpull/migrations/: env.py
esgpull/migrations/versions/: 0.3.0_update_tables.py  0.3.1_update_tables.py  0.3.2_update_tables.py  0.3.3_update_tables.py  0.3.4_update_tables.py  0.3.5_update_tables.py  0.3.6_update_tables.py  0.3.7_update_tables.py  0.3.8_update_tables.py  0.4.0_update_tables.py  0.5.0_update_tables.py  0.5.1_update_tables.py  0.5.2_update_tables.py  0.5.3_update_tables.py  0.5.4_update_tables.py  0.5.5_update_tables.py  0.6.0_update_tables.py  0.6.1_update_tables.py  0.6.2_update_tables.py  0.6.3_update_tables.py  0.6.4_update_tables.py  0.6.5_update_tables.py  0.7.0_update_tables.py  0.7.1_update_tables.py  0.7.2_update_tables.py  0.7.3_update_tables.py  0.8.0_update_tables.py  0.9.0_update_tables.py  0.9.1_update_tables.py  0.9.2_update_tables.py  0.9.3_update_tables.py  0.9.4_update_tables.py  0.9.5_update_tables.py  0.9.6_update_tables.py  14c72daea083_query_add_column_updated_at.py  3cd9d12ba8ae_.py  58409c37ff64_.py  c7c8541fa741_query_add_column_added_at.py  c7c8541fa741_query_add_column_created_at.py  d14f179e553c_file_add_composite_index_dataset_id_.py  (+1 more)
esgpull/models/: __init__.py  _select.py  base.py  dataset.py  facet.py  file.py  options.py  query.py  replication_events.py  selection.py  sql.py  synda_file.py  tag.py  utils.py
esgpull/query/: __init__.py  facet.py  facets.py  options.py  query.py  select.py  tags.py  utils.py
esgpull/storage/: __init__.py  drive.py  json.py  storage.py
esgpull/storage/sqlite/: __init__.py  contexts.py  core.py  tables.py  types.py
esgpull/utils/: __init__.py  constants.py  errors.py  semver.py
esgpullUtilities/: README.md  concatCVS.py  constants.py  extract_facets.py  parse_esgpull_files.py  rucio_from_file.py  rucio_update.py  utils.py
examples/: basic_sqlite_in_memory.py  context_example.py  ctx_hits.py  db.db  dual_query.yaml  facets.py  query_example.py  selection1.yaml  selection2.txt  selection2.yaml  selection_slicebug.txt  selection_slicebug.yaml
examples/selection_files/: download_example_large.yaml  download_example_small.yaml  requests_example.yaml  surface_temperature.yaml  translate_example.txt  translate_example.yaml
ext/: translate.nim
glossary/: index.html
installation/: index.html
migrations/: env.py
migrations/versions/: 4.0.0_init_tables.py  4.0.0_update_tables.py
plugins/: index.html
queries/: index.html
quickstart/: index.html
recipe/: meta.yaml  recipe.yaml
search/: index.html  search_index.json
tests/: conftest.py  test_auth.py  test_config.py  test_config_pydantic.py  test_context.py  test_dataset.py  test_db.py  test_download.py  test_esgpull.py  test_facet.py  test_fs.py  test_graph.py  test_plugin.py  test_processor.py  test_query.py  test_selection.py  test_settings.py  test_synda.py  test_utils.py  utils.py
tests/assets/: error_plugin.py  incompatible_plugin.py  priority_test_plugin.py  sample_plugin.py
tests/cli/: test_dataset.py  test_download.py  test_parse.py  test_plugin_cli.py  test_remove.py  test_show_dates.py  test_update.py
tests/context/: test_context.py  test_solr.py  test_stac.py  test_types.py
