[project]
name = "esgpull"
dynamic = ["version"]
description = "ESGF Data transfer Program"
authors = [
    {name = "Sven Rodriguez", email = "srodriguez@ipsl.fr"},
]
requires-python = ">=3.10"
license = {text = "Public"}
readme = "README.md"
maintainers = [
    {name = "Sven Rodriguez", email = "srodriguez@ipsl.fr"},
]
dependencies = [
    "MyProxyClient>=2.1.0",
    "aiofiles>=22.1.0",
    "alembic>=1.8.1",
    "click>=8.1.3",
    "click-params>=0.4.0",
    "httpx>=0.23.0",
    "nest-asyncio>=1.5.6",
    "pyOpenSSL>=22.1.0",
    "pyyaml>=6.0",
    "tomlkit>=0.11.5",
    "rich>=12.6.0",
    "sqlalchemy>=2.0.0b2",
    "setuptools>=65.4.1",
    "aiostream>=0.4.5",
    "typedload>=2.19",
    "attrs>=22.1.0",
]
[project.optional-dependencies]

[tool.pdm.dev-dependencies]
doc = [
    "mkdocs-material>=8.5.6",
]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=4.0.0",
]
lint = [
    "mypy>=0.982",
    "flake8>=5.0.4",
    "black>=22.8.0",
    "types-pyopenssl==22.1.0.1",
    "types-aiofiles==22.1.0",
    "types-python-dateutil==2.8.19.2",
    "types-pymysql==1.0.19.1",
    "types-pyyaml==6.0.12",
    "types-cryptography==3.3.23.1",
    "types-setuptools==65.5.0.1",
]

[project.scripts]
esgpull = "esgpull.cli:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "esgpull/version.py"

[tool.pdm.scripts]
lint_flake8 = "flake8 esgpull tests migrations examples"
lint_mypy = "mypy esgpull tests migrations examples"
lint = {composite = ["lint_flake8", "lint_mypy"]}
test = "pytest --runslow --cov-report term-missing:skip-covered --cov=esgpull -vv tests"
all = {composite = ["lint", "test"]}

[tool.black]
line-length = 79
extend-exclude = "setup.py"

[tool.mypy]
ignore_missing_imports = true
# plugins = [
#     "sqlalchemy.ext.mypy.plugin"
# ]

[tool.pytest.ini_options]
testpaths = "tests"
minversion = "6.2.4"
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning"
]

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["esgpull", "tests", "migrations", "examples"]
