[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esgpull"
version = "0.7.3"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
description = "ESGF data discovery, download, replication tool"
authors = [{name = "Sven Rodriguez", email = "srodriguez@ipsl.fr"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "MyProxyClient>=2.1.0",
  "aiofiles>=22.1.0",
  "alembic>=1.8.1",
  "click>=8.1.3",
  "click-params>=0.4.0",
  "httpx>=0.23.0",
  "nest-asyncio>=1.5.6",
  "pyOpenSSL>=22.1.0",
  "pyyaml>=6.0",
  "tomlkit>=0.11.5",
  "rich>=12.6.0",
  "sqlalchemy>=2.0.0b2",
  "setuptools>=65.4.1",
  "aiostream>=0.4.5",
  "attrs>=22.1.0",
  "cattrs>=22.2.0",
  "platformdirs>=2.6.2",
  "pyparsing>=3.0.9"
]
license.text = "BSD-3-Clause"

[project.scripts]
esgpull = "esgpull.cli:main"

[project.urls]
Repository = "https://github.com/ESGF/esgf-download"
Documentation = "https://esgf.github.io/esgf-download/"

[tool.black]
line-length = 79
extend-exclude = "setup.py"

[tool.coverage.run]
branch = true
source = ["esgpull/"]

[tool.hatch.build.targets.wheel]
packages = ["esgpull"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["esgpull", "tests", "migrations", "examples"]

[tool.mypy]
ignore_missing_imports = true

[tool.pdm.scripts]
doc = {shell = "cd docs && mkdocs serve", help = "Start doc server"}

[tool.pytest.ini_options]
minversion = "6.2.4"
filterwarnings = [
  "ignore::DeprecationWarning"
]
markers = [
  "slow: mark test as slow to run"
]
addopts = "-r aR -n auto --cov=esgpull --cov-config=pyproject.toml --cov-report term-missing:skip-covered --mypy"
testpaths = [
  "tests/"
]

[tool.ruff]
line-length = 79
extend-exclude = ["output/*", "esgpull/migrations/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.rye]
managed = true
dev-dependencies = [
  "jupyter-console>=6.6.3",
  "typing-extensions>=4.12.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "mkdocs-material>=9.5.34",
  "mypy>=1.11.2",
  "types-pyyaml>=6.0.12.20240808",
  "types-aiofiles>=24.1.0.20240626",
  "pytest-mypy>=0.10.3",
  "pytest-xdist>=3.6.1",
  "ipdb>=0.13.13",
  "orjson>=3.10.7"
]

[tool.rye.scripts]
esg = {cmd = "esgpull", env-file = ".env"}
